src/main/resources/tests/Semantics/bad/operationReturn2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : integer;
begin
   X := true and false;
end ExampleProcedure;
